// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HandRange.parse() parses "" into a hand range 1`] = `
HandRange {
  "map": Map {},
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "7d6h" into a hand range 1`] = `
HandRange {
  "map": Map {
    8592031744 => 1,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "7d6h:0.67" into a hand range 1`] = `
HandRange {
  "map": Map {
    8592031744 => 0.67,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "44" into a hand range 1`] = `
HandRange {
  "map": Map {
    8389632 => 1,
    68719477760 => 1,
    562949953422336 => 1,
    68727865344 => 1,
    562949961809920 => 1,
    563018672898048 => 1,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "44:0.44" into a hand range 1`] = `
HandRange {
  "map": Map {
    8389632 => 0.44,
    68719477760 => 0.44,
    562949953422336 => 0.44,
    68727865344 => 0.44,
    562949961809920 => 0.44,
    563018672898048 => 0.44,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "72o" into a hand range 1`] = `
HandRange {
  "map": Map {
    33554560 => 1,
    274877907072 => 1,
    2251799813685376 => 1,
    1052672 => 1,
    274878955520 => 1,
    2251799814733824 => 1,
    8589938688 => 1,
    8623489024 => 1,
    2251808403619840 => 1,
    70368744181760 => 1,
    70368777732096 => 1,
    70643622084608 => 1,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "72o:0.27" into a hand range 1`] = `
HandRange {
  "map": Map {
    33554560 => 0.27,
    274877907072 => 0.27,
    2251799813685376 => 0.27,
    1052672 => 0.27,
    274878955520 => 0.27,
    2251799814733824 => 0.27,
    8589938688 => 0.27,
    8623489024 => 0.27,
    2251808403619840 => 0.27,
    70368744181760 => 0.27,
    70368777732096 => 0.27,
    70643622084608 => 0.27,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "88-66" into a hand range 1`] = `
HandRange {
  "map": Map {
    524352 => 1,
    4294967360 => 1,
    35184372088896 => 1,
    4295491584 => 1,
    35184372613120 => 1,
    35188667056128 => 1,
    1048704 => 1,
    8589934720 => 1,
    70368744177792 => 1,
    8590983168 => 1,
    70368745226240 => 1,
    70377334112256 => 1,
    2097408 => 1,
    17179869440 => 1,
    140737488355584 => 1,
    17181966336 => 1,
    140737490452480 => 1,
    140754668224512 => 1,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "88-66,JJ+,44,AQs-A9s,98o-96o,K8s+,ATo+,44,JTs,72o,AsKs,7d6h" into a hand range 1`] = `
HandRange {
  "map": Map {
    524352 => 1,
    4294967360 => 1,
    35184372088896 => 1,
    4295491584 => 1,
    35184372613120 => 1,
    35188667056128 => 1,
    1048704 => 1,
    8589934720 => 1,
    70368744177792 => 1,
    8590983168 => 1,
    70368745226240 => 1,
    70377334112256 => 1,
    2097408 => 1,
    17179869440 => 1,
    140737488355584 => 1,
    17181966336 => 1,
    140737490452480 => 1,
    140754668224512 => 1,
    8193 => 1,
    67108865 => 1,
    549755813889 => 1,
    67117056 => 1,
    549755822080 => 1,
    549822922752 => 1,
    16386 => 1,
    134217730 => 1,
    1099511627778 => 1,
    134234112 => 1,
    1099511644160 => 1,
    1099645845504 => 1,
    32772 => 1,
    268435460 => 1,
    2199023255556 => 1,
    268468224 => 1,
    2199023288320 => 1,
    2199291691008 => 1,
    65544 => 1,
    536870920 => 1,
    4398046511112 => 1,
    536936448 => 1,
    4398046576640 => 1,
    4398583382016 => 1,
    8389632 => 1,
    68719477760 => 1,
    562949953422336 => 1,
    68727865344 => 1,
    562949961809920 => 1,
    563018672898048 => 1,
    5 => 1,
    40960 => 1,
    335544320 => 1,
    2748779069440 => 1,
    9 => 1,
    73728 => 1,
    603979776 => 1,
    4947802324992 => 1,
    17 => 1,
    139264 => 1,
    1140850688 => 1,
    9345848836096 => 1,
    33 => 1,
    270336 => 1,
    2214592512 => 1,
    18141941858304 => 1,
    524320 => 1,
    4294967328 => 1,
    35184372088864 => 1,
    262208 => 1,
    4295229440 => 1,
    35184372350976 => 1,
    2147483712 => 1,
    2148007936 => 1,
    35186519572480 => 1,
    17592186044480 => 1,
    17592186568704 => 1,
    17596481011712 => 1,
    1048608 => 1,
    8589934624 => 1,
    70368744177696 => 1,
    262272 => 1,
    8590196736 => 1,
    70368744439808 => 1,
    2147483776 => 1,
    2148532224 => 1,
    70370891661312 => 1,
    17592186044544 => 1,
    17592187092992 => 1,
    17600775979008 => 1,
    2097184 => 1,
    17179869216 => 1,
    140737488355360 => 1,
    262400 => 1,
    17180131328 => 1,
    140737488617472 => 1,
    2147483904 => 1,
    2149580800 => 1,
    140739635838976 => 1,
    17592186044672 => 1,
    17592188141568 => 1,
    17609365913600 => 1,
    6 => 1,
    49152 => 1,
    402653184 => 1,
    3298534883328 => 1,
    10 => 1,
    81920 => 1,
    671088640 => 1,
    5497558138880 => 1,
    18 => 1,
    147456 => 1,
    1207959552 => 1,
    9895604649984 => 1,
    34 => 1,
    278528 => 1,
    2281701376 => 1,
    18691697672192 => 1,
    66 => 1,
    540672 => 1,
    4429185024 => 1,
    36283883716608 => 1,
    16385 => 1,
    134217729 => 1,
    1099511627777 => 1,
    8194 => 1,
    134225920 => 1,
    1099511635968 => 1,
    67108866 => 1,
    67125248 => 1,
    1099578736640 => 1,
    549755813890 => 1,
    549755830272 => 1,
    549890031616 => 1,
    32769 => 1,
    268435457 => 1,
    2199023255553 => 1,
    8196 => 1,
    268443648 => 1,
    2199023263744 => 1,
    67108868 => 1,
    67141632 => 1,
    2199090364416 => 1,
    549755813892 => 1,
    549755846656 => 1,
    550024249344 => 1,
    65537 => 1,
    536870913 => 1,
    4398046511105 => 1,
    8200 => 1,
    536879104 => 1,
    4398046519296 => 1,
    67108872 => 1,
    67174400 => 1,
    4398113619968 => 1,
    549755813896 => 1,
    549755879424 => 1,
    550292684800 => 1,
    131073 => 1,
    1073741825 => 1,
    8796093022209 => 1,
    8208 => 1,
    1073750016 => 1,
    8796093030400 => 1,
    67108880 => 1,
    67239936 => 1,
    8796160131072 => 1,
    549755813904 => 1,
    549755944960 => 1,
    550829555712 => 1,
    24 => 1,
    196608 => 1,
    1610612736 => 1,
    13194139533312 => 1,
    33554560 => 1,
    274877907072 => 1,
    2251799813685376 => 1,
    1052672 => 1,
    274878955520 => 1,
    2251799814733824 => 1,
    8589938688 => 1,
    8623489024 => 1,
    2251808403619840 => 1,
    70368744181760 => 1,
    70368777732096 => 1,
    70643622084608 => 1,
    3 => 1,
    8592031744 => 1,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "88-66:0.66" into a hand range 1`] = `
HandRange {
  "map": Map {
    524352 => 0.66,
    4294967360 => 0.66,
    35184372088896 => 0.66,
    4295491584 => 0.66,
    35184372613120 => 0.66,
    35188667056128 => 0.66,
    1048704 => 0.66,
    8589934720 => 0.66,
    70368744177792 => 0.66,
    8590983168 => 0.66,
    70368745226240 => 0.66,
    70377334112256 => 0.66,
    2097408 => 0.66,
    17179869440 => 0.66,
    140737488355584 => 0.66,
    17181966336 => 0.66,
    140737490452480 => 0.66,
    140754668224512 => 0.66,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "88-66:0.66,JJ+:0.5,44,AQs-A9s:0.2,98o-96o:0.999,K8s+:0.80,ATo+:1,44:0.44,JTs:0.25,72o:0.27,AsKs:0.4,7d6h:0.67" into a hand range 1`] = `
HandRange {
  "map": Map {
    524352 => 0.66,
    4294967360 => 0.66,
    35184372088896 => 0.66,
    4295491584 => 0.66,
    35184372613120 => 0.66,
    35188667056128 => 0.66,
    1048704 => 0.66,
    8589934720 => 0.66,
    70368744177792 => 0.66,
    8590983168 => 0.66,
    70368745226240 => 0.66,
    70377334112256 => 0.66,
    2097408 => 0.66,
    17179869440 => 0.66,
    140737488355584 => 0.66,
    17181966336 => 0.66,
    140737490452480 => 0.66,
    140754668224512 => 0.66,
    8193 => 0.5,
    67108865 => 0.5,
    549755813889 => 0.5,
    67117056 => 0.5,
    549755822080 => 0.5,
    549822922752 => 0.5,
    16386 => 0.5,
    134217730 => 0.5,
    1099511627778 => 0.5,
    134234112 => 0.5,
    1099511644160 => 0.5,
    1099645845504 => 0.5,
    32772 => 0.5,
    268435460 => 0.5,
    2199023255556 => 0.5,
    268468224 => 0.5,
    2199023288320 => 0.5,
    2199291691008 => 0.5,
    65544 => 0.5,
    536870920 => 0.5,
    4398046511112 => 0.5,
    536936448 => 0.5,
    4398046576640 => 0.5,
    4398583382016 => 0.5,
    8389632 => 1,
    68719477760 => 1,
    562949953422336 => 1,
    68727865344 => 1,
    562949961809920 => 1,
    563018672898048 => 1,
    5 => 0.2,
    40960 => 0.2,
    335544320 => 0.2,
    2748779069440 => 0.2,
    9 => 0.2,
    73728 => 0.2,
    603979776 => 0.2,
    4947802324992 => 0.2,
    17 => 0.2,
    139264 => 0.2,
    1140850688 => 0.2,
    9345848836096 => 0.2,
    33 => 0.2,
    270336 => 0.2,
    2214592512 => 0.2,
    18141941858304 => 0.2,
    524320 => 0.999,
    4294967328 => 0.999,
    35184372088864 => 0.999,
    262208 => 0.999,
    4295229440 => 0.999,
    35184372350976 => 0.999,
    2147483712 => 0.999,
    2148007936 => 0.999,
    35186519572480 => 0.999,
    17592186044480 => 0.999,
    17592186568704 => 0.999,
    17596481011712 => 0.999,
    1048608 => 0.999,
    8589934624 => 0.999,
    70368744177696 => 0.999,
    262272 => 0.999,
    8590196736 => 0.999,
    70368744439808 => 0.999,
    2147483776 => 0.999,
    2148532224 => 0.999,
    70370891661312 => 0.999,
    17592186044544 => 0.999,
    17592187092992 => 0.999,
    17600775979008 => 0.999,
    2097184 => 0.999,
    17179869216 => 0.999,
    140737488355360 => 0.999,
    262400 => 0.999,
    17180131328 => 0.999,
    140737488617472 => 0.999,
    2147483904 => 0.999,
    2149580800 => 0.999,
    140739635838976 => 0.999,
    17592186044672 => 0.999,
    17592188141568 => 0.999,
    17609365913600 => 0.999,
    6 => 0.8,
    49152 => 0.8,
    402653184 => 0.8,
    3298534883328 => 0.8,
    10 => 0.8,
    81920 => 0.8,
    671088640 => 0.8,
    5497558138880 => 0.8,
    18 => 0.8,
    147456 => 0.8,
    1207959552 => 0.8,
    9895604649984 => 0.8,
    34 => 0.8,
    278528 => 0.8,
    2281701376 => 0.8,
    18691697672192 => 0.8,
    66 => 0.8,
    540672 => 0.8,
    4429185024 => 0.8,
    36283883716608 => 0.8,
    16385 => 1,
    134217729 => 1,
    1099511627777 => 1,
    8194 => 1,
    134225920 => 1,
    1099511635968 => 1,
    67108866 => 1,
    67125248 => 1,
    1099578736640 => 1,
    549755813890 => 1,
    549755830272 => 1,
    549890031616 => 1,
    32769 => 1,
    268435457 => 1,
    2199023255553 => 1,
    8196 => 1,
    268443648 => 1,
    2199023263744 => 1,
    67108868 => 1,
    67141632 => 1,
    2199090364416 => 1,
    549755813892 => 1,
    549755846656 => 1,
    550024249344 => 1,
    65537 => 1,
    536870913 => 1,
    4398046511105 => 1,
    8200 => 1,
    536879104 => 1,
    4398046519296 => 1,
    67108872 => 1,
    67174400 => 1,
    4398113619968 => 1,
    549755813896 => 1,
    549755879424 => 1,
    550292684800 => 1,
    131073 => 1,
    1073741825 => 1,
    8796093022209 => 1,
    8208 => 1,
    1073750016 => 1,
    8796093030400 => 1,
    67108880 => 1,
    67239936 => 1,
    8796160131072 => 1,
    549755813904 => 1,
    549755944960 => 1,
    550829555712 => 1,
    24 => 0.25,
    196608 => 0.25,
    1610612736 => 0.25,
    13194139533312 => 0.25,
    33554560 => 0.27,
    274877907072 => 0.27,
    2251799813685376 => 0.27,
    1052672 => 0.27,
    274878955520 => 0.27,
    2251799814733824 => 0.27,
    8589938688 => 0.27,
    8623489024 => 0.27,
    2251808403619840 => 0.27,
    70368744181760 => 0.27,
    70368777732096 => 0.27,
    70643622084608 => 0.27,
    3 => 0.4,
    8592031744 => 0.67,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "98o-96o" into a hand range 1`] = `
HandRange {
  "map": Map {
    524320 => 1,
    4294967328 => 1,
    35184372088864 => 1,
    262208 => 1,
    4295229440 => 1,
    35184372350976 => 1,
    2147483712 => 1,
    2148007936 => 1,
    35186519572480 => 1,
    17592186044480 => 1,
    17592186568704 => 1,
    17596481011712 => 1,
    1048608 => 1,
    8589934624 => 1,
    70368744177696 => 1,
    262272 => 1,
    8590196736 => 1,
    70368744439808 => 1,
    2147483776 => 1,
    2148532224 => 1,
    70370891661312 => 1,
    17592186044544 => 1,
    17592187092992 => 1,
    17600775979008 => 1,
    2097184 => 1,
    17179869216 => 1,
    140737488355360 => 1,
    262400 => 1,
    17180131328 => 1,
    140737488617472 => 1,
    2147483904 => 1,
    2149580800 => 1,
    140739635838976 => 1,
    17592186044672 => 1,
    17592188141568 => 1,
    17609365913600 => 1,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "98o-96o:0.999" into a hand range 1`] = `
HandRange {
  "map": Map {
    524320 => 0.999,
    4294967328 => 0.999,
    35184372088864 => 0.999,
    262208 => 0.999,
    4295229440 => 0.999,
    35184372350976 => 0.999,
    2147483712 => 0.999,
    2148007936 => 0.999,
    35186519572480 => 0.999,
    17592186044480 => 0.999,
    17592186568704 => 0.999,
    17596481011712 => 0.999,
    1048608 => 0.999,
    8589934624 => 0.999,
    70368744177696 => 0.999,
    262272 => 0.999,
    8590196736 => 0.999,
    70368744439808 => 0.999,
    2147483776 => 0.999,
    2148532224 => 0.999,
    70370891661312 => 0.999,
    17592186044544 => 0.999,
    17592187092992 => 0.999,
    17600775979008 => 0.999,
    2097184 => 0.999,
    17179869216 => 0.999,
    140737488355360 => 0.999,
    262400 => 0.999,
    17180131328 => 0.999,
    140737488617472 => 0.999,
    2147483904 => 0.999,
    2149580800 => 0.999,
    140739635838976 => 0.999,
    17592186044672 => 0.999,
    17592188141568 => 0.999,
    17609365913600 => 0.999,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "AQs-A9s" into a hand range 1`] = `
HandRange {
  "map": Map {
    5 => 1,
    40960 => 1,
    335544320 => 1,
    2748779069440 => 1,
    9 => 1,
    73728 => 1,
    603979776 => 1,
    4947802324992 => 1,
    17 => 1,
    139264 => 1,
    1140850688 => 1,
    9345848836096 => 1,
    33 => 1,
    270336 => 1,
    2214592512 => 1,
    18141941858304 => 1,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "AQs-A9s:0.2" into a hand range 1`] = `
HandRange {
  "map": Map {
    5 => 0.2,
    40960 => 0.2,
    335544320 => 0.2,
    2748779069440 => 0.2,
    9 => 0.2,
    73728 => 0.2,
    603979776 => 0.2,
    4947802324992 => 0.2,
    17 => 0.2,
    139264 => 0.2,
    1140850688 => 0.2,
    9345848836096 => 0.2,
    33 => 0.2,
    270336 => 0.2,
    2214592512 => 0.2,
    18141941858304 => 0.2,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "ATo+" into a hand range 1`] = `
HandRange {
  "map": Map {
    16385 => 1,
    134217729 => 1,
    1099511627777 => 1,
    8194 => 1,
    134225920 => 1,
    1099511635968 => 1,
    67108866 => 1,
    67125248 => 1,
    1099578736640 => 1,
    549755813890 => 1,
    549755830272 => 1,
    549890031616 => 1,
    32769 => 1,
    268435457 => 1,
    2199023255553 => 1,
    8196 => 1,
    268443648 => 1,
    2199023263744 => 1,
    67108868 => 1,
    67141632 => 1,
    2199090364416 => 1,
    549755813892 => 1,
    549755846656 => 1,
    550024249344 => 1,
    65537 => 1,
    536870913 => 1,
    4398046511105 => 1,
    8200 => 1,
    536879104 => 1,
    4398046519296 => 1,
    67108872 => 1,
    67174400 => 1,
    4398113619968 => 1,
    549755813896 => 1,
    549755879424 => 1,
    550292684800 => 1,
    131073 => 1,
    1073741825 => 1,
    8796093022209 => 1,
    8208 => 1,
    1073750016 => 1,
    8796093030400 => 1,
    67108880 => 1,
    67239936 => 1,
    8796160131072 => 1,
    549755813904 => 1,
    549755944960 => 1,
    550829555712 => 1,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "ATo+:1" into a hand range 1`] = `
HandRange {
  "map": Map {
    16385 => 1,
    134217729 => 1,
    1099511627777 => 1,
    8194 => 1,
    134225920 => 1,
    1099511635968 => 1,
    67108866 => 1,
    67125248 => 1,
    1099578736640 => 1,
    549755813890 => 1,
    549755830272 => 1,
    549890031616 => 1,
    32769 => 1,
    268435457 => 1,
    2199023255553 => 1,
    8196 => 1,
    268443648 => 1,
    2199023263744 => 1,
    67108868 => 1,
    67141632 => 1,
    2199090364416 => 1,
    549755813892 => 1,
    549755846656 => 1,
    550024249344 => 1,
    65537 => 1,
    536870913 => 1,
    4398046511105 => 1,
    8200 => 1,
    536879104 => 1,
    4398046519296 => 1,
    67108872 => 1,
    67174400 => 1,
    4398113619968 => 1,
    549755813896 => 1,
    549755879424 => 1,
    550292684800 => 1,
    131073 => 1,
    1073741825 => 1,
    8796093022209 => 1,
    8208 => 1,
    1073750016 => 1,
    8796093030400 => 1,
    67108880 => 1,
    67239936 => 1,
    8796160131072 => 1,
    549755813904 => 1,
    549755944960 => 1,
    550829555712 => 1,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "AsKs" into a hand range 1`] = `
HandRange {
  "map": Map {
    3 => 1,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "AsKs:0.4" into a hand range 1`] = `
HandRange {
  "map": Map {
    3 => 0.4,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "JJ+" into a hand range 1`] = `
HandRange {
  "map": Map {
    8193 => 1,
    67108865 => 1,
    549755813889 => 1,
    67117056 => 1,
    549755822080 => 1,
    549822922752 => 1,
    16386 => 1,
    134217730 => 1,
    1099511627778 => 1,
    134234112 => 1,
    1099511644160 => 1,
    1099645845504 => 1,
    32772 => 1,
    268435460 => 1,
    2199023255556 => 1,
    268468224 => 1,
    2199023288320 => 1,
    2199291691008 => 1,
    65544 => 1,
    536870920 => 1,
    4398046511112 => 1,
    536936448 => 1,
    4398046576640 => 1,
    4398583382016 => 1,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "JJ+:0.5" into a hand range 1`] = `
HandRange {
  "map": Map {
    8193 => 0.5,
    67108865 => 0.5,
    549755813889 => 0.5,
    67117056 => 0.5,
    549755822080 => 0.5,
    549822922752 => 0.5,
    16386 => 0.5,
    134217730 => 0.5,
    1099511627778 => 0.5,
    134234112 => 0.5,
    1099511644160 => 0.5,
    1099645845504 => 0.5,
    32772 => 0.5,
    268435460 => 0.5,
    2199023255556 => 0.5,
    268468224 => 0.5,
    2199023288320 => 0.5,
    2199291691008 => 0.5,
    65544 => 0.5,
    536870920 => 0.5,
    4398046511112 => 0.5,
    536936448 => 0.5,
    4398046576640 => 0.5,
    4398583382016 => 0.5,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "JTs" into a hand range 1`] = `
HandRange {
  "map": Map {
    24 => 1,
    196608 => 1,
    1610612736 => 1,
    13194139533312 => 1,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "JTs:0.25" into a hand range 1`] = `
HandRange {
  "map": Map {
    24 => 0.25,
    196608 => 0.25,
    1610612736 => 0.25,
    13194139533312 => 0.25,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "K8s+" into a hand range 1`] = `
HandRange {
  "map": Map {
    6 => 1,
    49152 => 1,
    402653184 => 1,
    3298534883328 => 1,
    10 => 1,
    81920 => 1,
    671088640 => 1,
    5497558138880 => 1,
    18 => 1,
    147456 => 1,
    1207959552 => 1,
    9895604649984 => 1,
    34 => 1,
    278528 => 1,
    2281701376 => 1,
    18691697672192 => 1,
    66 => 1,
    540672 => 1,
    4429185024 => 1,
    36283883716608 => 1,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "K8s+:0.80" into a hand range 1`] = `
HandRange {
  "map": Map {
    6 => 0.8,
    49152 => 0.8,
    402653184 => 0.8,
    3298534883328 => 0.8,
    10 => 0.8,
    81920 => 0.8,
    671088640 => 0.8,
    5497558138880 => 0.8,
    18 => 0.8,
    147456 => 0.8,
    1207959552 => 0.8,
    9895604649984 => 0.8,
    34 => 0.8,
    278528 => 0.8,
    2281701376 => 0.8,
    18691697672192 => 0.8,
    66 => 0.8,
    540672 => 0.8,
    4429185024 => 0.8,
    36283883716608 => 0.8,
  },
  "memoizedRankPairs": null,
}
`;
